@@ -1,5 +1,14 @@
 2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	* butterfly.c: Remove the device support decision based on
+	the old AVR910 device codes; we've got signature verification
+	now so better rely on that.
+	* avr910.c: Revert the signature bytes returned, as it already
+	happened in butterfly.c.  This closes bug #14998: Signature Bytes
+	read in wrong order (avr910 mode)
+
+2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	Submitted by Wim Lewis.
 	* serbb_posix.c: Improve error handling.
 	patch #4923: Better error reporting for serial-bitbang programmers
